[gd_scene load_steps=7 format=3 uid="uid://bi0o07j0g42lx"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_liasb"]
[ext_resource type="PackedScene" uid="uid://b2wp1pekvvfr7" path="res://scenes/hud/meter.tscn" id="2_b2lt3"]

[sub_resource type="LabelSettings" id="LabelSettings_dsuot"]

[sub_resource type="LabelSettings" id="LabelSettings_p83le"]
font_size = 126

[sub_resource type="LabelSettings" id="LabelSettings_rrjq8"]

[sub_resource type="LabelSettings" id="LabelSettings_avmgy"]
font_size = 40

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_liasb")

[node name="BoostReadyLabel" type="Label" parent="."]
visible = false
offset_left = 335.0
offset_top = 57.0
offset_right = 448.0
offset_bottom = 83.0
text = "[A] !"

[node name="DangerDistance" type="Label" parent="."]
offset_left = 11.0
offset_top = 291.0
offset_right = 57.0
offset_bottom = 317.0
text = "< 0.00"
label_settings = SubResource("LabelSettings_dsuot")

[node name="DistancePosition" type="Marker2D" parent="."]
position = Vector2(14, 303)
scale = Vector2(3, 3)

[node name="ClearedLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -87.5
offset_right = 175.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
text = "Clear!"
label_settings = SubResource("LabelSettings_p83le")

[node name="HitScreen" type="ColorRect" parent="."]
offset_right = 960.0
offset_bottom = 539.0
color = Color(0.894118, 0, 0.137255, 0)

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[node name="HP" type="Node2D" parent="."]
position = Vector2(67, 22)

[node name="HPLabel" type="Label" parent="HP"]
offset_left = -2.0
offset_top = -2.0
offset_right = 20.0
offset_bottom = 24.0
text = "HP"
label_settings = SubResource("LabelSettings_rrjq8")
metadata/_edit_use_anchors_ = true

[node name="HP_1" parent="HP" instance=ExtResource("2_b2lt3")]
position = Vector2(57, 12)

[node name="OD" type="Node2D" parent="."]
position = Vector2(22, 58)

[node name="OD_1" parent="OD" instance=ExtResource("2_b2lt3")]
position = Vector2(70, 12)

[node name="BoostLabel" type="Label" parent="OD"]
offset_left = -2.0
offset_top = -2.0
offset_right = 33.0
offset_bottom = 24.0
text = "OVD"
label_settings = SubResource("LabelSettings_rrjq8")

[node name="DangerDistanceBig" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 7.0
offset_right = 40.0
offset_bottom = 65.0
size_flags_horizontal = 4
text = "0.00"
label_settings = SubResource("LabelSettings_avmgy")

[node name="Meters" type="Label" parent="DangerDistanceBig"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -5.0
offset_right = 44.0
offset_bottom = 21.0
text = "m"
